--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@ body {
   background-color: #fff;
 }
 
+.codex-editor__redactor {
+  padding: 50px !important;
+}
+
 button {
   background-color: rgb(0, 174, 255);
   color: #fff;
